<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jeremiahwong.hw01.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:id="@+id/name"
                android:text="@string/name"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                tools:textSize="30sp"
                android:textAlignment="center"
                android:background="@color/colorAccent"
                android:layout_weight="0.7">
        </TextView>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="horizontal"
                android:background="@android:color/holo_green_light">

                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:id="@+id/image"
                    android:src="@drawable/pic"
                    android:contentDescription="@string/icon_image"
                    android:layout_weight="1"
                    tools:ignore="RtlHardcoded,RtlSymmetry" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editText" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:background="@android:color/black"
            android:layout_weight="0.1">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="@android:color/holo_red_light">

                <Button
                    android:text="@string/labelDate"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:id="@+id/btnDate"
                    android:layout_weight="1"
                    tools:ignore="NestedWeights"
                    android:onClick="getCurrentDate" />

                <Button
                    android:text="@string/labelTime"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:id="@+id/btnTime"
                    android:layout_weight="1"
                    android:onClick="getCurrentTime" />

                <Button
                    android:text="@string/labelTemp"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:id="@+id/btnTemp"
                    android:layout_weight="1"
                    android:onClick="getCurrentTemp" />
            </LinearLayout>

            <TextView
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:id="@+id/txtInformation"
                android:textSize="20sp"
                android:gravity="center">
            </TextView>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:background="@android:color/holo_orange_light"
            android:layout_weight="1"
            android:id="@+id/Day"
            android:text="@string/Day"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
            android:textAlignment="center"
            android:textSize="30sp">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:background="@android:color/holo_blue_bright"
            android:layout_weight="0.5"
            android:id="@+id/Copyright"
            android:text="@string/Copyright"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="18sp"
            android:textAlignment="center">
        </TextView>
    </LinearLayout>
</RelativeLayout>